methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:5: error: '(' expected but identifier found.
                                      {if !(estFaceMur();) {avance();}
                                          ^SlugTracking:7: error: illegal start of simple expression
                                      }
                                      ^