methods.slug.SlugTracking.scala.code
var vert:Color = Color.green;

def isFacingTrail():Boolean = {var col:Color = getCouleurSol(); while (col==vert) && !(estSurBiscuit) 
                                      {if !(estFaceMur();) {avance();}
                                       else {recule();gauche();}
                                      }
                              }
isFacingTrail();
